--- a/luthier_report_template.html
+++ b/luthier_report_template.html
@@ -419,14 +419,13 @@
       </div>
     </div>
 
-    <!-- Full-Width Sections -->
-    <!-- Customer Request -->
+    <!-- Customer Request (Full Width) -->
     <div class="section" style="margin-bottom: 12px;">
       <div class="section-title">Customer Request</div>
       <div class="notes-box" id="customerNotesBox"></div>
     </div>
 
-    <!-- Notes -->
+    <!-- Notes (Full Width) -->
     <div class="section" style="margin-bottom: 12px;">
       <div class="section-title">Notes</div>
       <div class="notes-box" id="techNotesBox"></div>
