--- a/luthier_report_template.html
+++ b/luthier_report_template.html
@@ -269,7 +269,7 @@
         <div class="company-name">ROADMAN GUITARS</div>
         <div class="company-tagline">Expert Luthier Services</div>
         <div class="contact-info">
-          123 Music Lane | Austin, TX 78701 | (512) 555-ROCK | <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="bcd5d2dad3fcced3ddd8d1ddd2dbc9d5c8ddcecf92dfd3d1">[email&#160;protected]</a>
+          123 Music Lane | Austin, TX 78701 | (512) 555-ROCK | info@roadmanguitars.com
         </div>
       </div>
       <div class="report-date">
@@ -458,7 +458,7 @@
     </div>
   </div>
 
-  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+  <script>
   (function(){
     // Pull payload saved by the management page
     const raw = localStorage.getItem('luthierReportData');
@@ -487,7 +487,11 @@
     setText('projId', p.projectId ? ('#' + p.projectId) : (p.id ? ('#' + String(p.id).slice(0,8)) : ''));
 
     // Header info
-    const instrumentName = [('serialNumberText', p.serialNumber || '');
+    const instrumentName = [p.instrumentMake, p.instrumentModel].filter(Boolean).join(' ');
+    setText('customerName', p.name || '');
+    setText('instrumentName', instrumentName || p.instrumentType || '');
+    setText('statusText', p.status || '');
+    setText('serialNumberText', p.serialNumber || '');
 
     // Measurements
     setText('m_relief_before', inch(p.neckReliefBefore));
