--- a/luthier_report_template.html
+++ b/luthier_report_template.html
@@ -267,9 +267,9 @@
       </div>
       <div class="company-info">
         <div class="company-name">ROADMAN GUITARS</div>
-        <div class="company-tagline">Expert Luthier Services</div>
+        <div class="company-tagline">-------------</div>
         <div class="contact-info">
-          123 Music Lane | Austin, TX 78701 | (512) 555-ROCK | info@roadmanguitars.com
+          San Antonio, TX | roadmanguitars@gmail.com
         </div>
       </div>
       <div class="report-date">
