--- a/luthier_report_template.html
+++ b/luthier_report_template.html
@@ -267,7 +267,7 @@
       </div>
       <div class="company-info">
         <div class="company-name">ROADMAN GUITARS</div>
-        <div class="company-tagline">-------------</div>
+        <div class="company-tagline">          </div>
         <div class="contact-info">
           San Antonio, TX | roadmanguitars@gmail.com
         </div>
