--- a/luthier_report_template.html
+++ b/luthier_report_template.html
@@ -263,7 +263,7 @@
     <!-- Letterhead -->
     <header class="letterhead">
       <div class="logo-section">
-        LOGO<br>AREA
+        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAHgAAABQCAYAAADSm7GJAAAKOmlDQ1BzUkdCIElFQzYxOTY2LTIuMQAASImdU3dYU3cXPvfe7MFKiICMsJdsgQAiI+whU5aoxCRAGCGGBNwDERWsKCqyFEWqAhasliF1IoqDgqjgtiBFRK3FKi4cfaLP09o+/b6vX98/7n2f8zvn3t9533MAaAEhInEWqgKQKZZJI/292XHxCWxiD6BABgLYAfD42ZLQK...snip...JFxFggRcRYIEXEWCBFxFggRcRYImwy/8AbmdzeLBYqo0AAAAASUVORK5CYII=" alt="Embedded Image">
       </div>
       <div class="company-info">
         <div class="company-name">ROADMAN GUITARS</div>
