--- a/estimate_template.html
+++ b/estimate_template.html
@@ -155,9 +155,8 @@
       </div>
       <div class="company-info">
         <div class="company-name">Roadman Guitars</div>
-        <div class="company-tagline">Expert Guitar Setup & Repair</div>
-        <div class="contact-info">
-          📧 <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="c4ada1b7aab6a5abadb6b084a3a9a5ada8eaa7aba9">[email&#160;protected]</a> | 📞 (210) 555-XXXX | 📍 San Antonio, TX
+        <div class="company-tagline">Guitar Setup & Repair</div>
+        <div class="contact-info"> roadmanguitars@gmail.com| 📍 San Antonio, TX
         </div>
       </div>
       <div class="report-date">
