--- a/estimate_template.html
+++ b/estimate_template.html
@@ -156,7 +156,7 @@
       <div class="company-info">
         <div class="company-name">Roadman Guitars</div>
         <div class="company-tagline">Guitar Setup & Repair</div>
-        <div class="contact-info"> roadmanguitars@gmail.com| 📍 San Antonio, TX
+        <div class="contact-info"> roadmanguitars@gmail.com  |  San Antonio, TX
         </div>
       </div>
       <div class="report-date">
