--- a/project-management-estimate.html
+++ b/project-management-estimate.html
@@ -1923,6 +1923,7 @@
           dueDate: document.getElementById('dueDate').value || null,
           store: document.getElementById('store').value,
           intakeNotes: document.getElementById('intakeNotes').value,
+          estimateNotes: document.getElementById('estimateNotes').value,
           notes: document.getElementById('notes').value,
           
           // Billing data - save calculated total, tax amount, and commission percentage
