--- a/project-management-estimate.html
+++ b/project-management-estimate.html
@@ -157,6 +157,7 @@
             <option value="On The Bench">On the Bench</option>
             <option value="On Deck">Waiting</option>
             <option value="Done">Done</option>
+            <option value="Returned">Returned</option>
           </select>
           <button class="btn small success" onclick="createNewProject()">New</button>
           <button class="btn small" onclick="refreshProjects()">Refresh</button>
