--- a/project-management-estimate.html
+++ b/project-management-estimate.html
@@ -676,6 +676,7 @@
                 <option value="Waiting" ${currentProject.status === 'Waiting' ? 'selected' : ''}>Waiting</option>
                 <option value="Done" ${currentProject.status === 'Done' ? 'selected' : ''}>Done</option>
                 <option value="Paid" ${currentProject.status === 'Paid' ? 'selected' : ''}>Paid</option>
+                 <option value="Returned" ${currentProject.status === 'Returned' ? 'selected' : ''}>Returned</option>
               </select>
             </div>
             <div class="form-group">
