--- a/project-management-estimate.html
+++ b/project-management-estimate.html
@@ -712,6 +712,7 @@
                 <option value="Lark Guitars"     ${currentProject.store === 'Lark Guitars' ? 'selected' : ''}>Lark Guitars</option>
                 <option value="Robot Monster"    ${currentProject.store === 'Robot Monster' ? 'selected' : ''}>Robot Monster</option>
                 <option value="Internet Order"    ${currentProject.store === 'Internet Order' ? 'selected' : ''}>Internet Order</option>
+                <option value="Internet Order"    ${currentProject.store === 'Interstellar Guitars' ? 'selected' : ''}>Interstellar Guitars</option>
               </select>
             </div>
             <div class="form-group full-width">
