--- a/priority-manager.html
+++ b/priority-manager.html
@@ -58,11 +58,14 @@
         .project-item {
             background: #f9f9f9;
             border: 1px solid #ddd;
-            border-radius: 6px;
-            padding: 10px 12px;
-            margin-bottom: 8px;
+            border-radius: 4px;
+            padding: 8px 10px;
+            margin-bottom: 6px;
             cursor: move;
             transition: all 0.2s;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         .project-item:hover {
@@ -82,42 +85,55 @@
         .project-header {
             display: flex;
             justify-content: space-between;
-            align-items: flex-start;
-            margin-bottom: 4px;
+            align-items: center;
+            flex: 1;
+            gap: 10px;
         }
 
         .project-info {
             flex: 1;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            overflow: hidden;
         }
 
         .customer-name {
             font-weight: 600;
             color: #333;
-            font-size: 14px;
+            font-size: 13px;
+            white-space: nowrap;
+            min-width: 120px;
         }
 
         .project-title {
             color: #666;
-            font-size: 13px;
-            margin-top: 1px;
+            font-size: 12px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            flex: 1;
         }
 
         .creation-date {
             color: #999;
             font-size: 11px;
-            margin-top: 2px;
+            white-space: nowrap;
+            min-width: 90px;
+            text-align: right;
         }
 
         .skip-btn {
             background: #ff9800;
             color: white;
             border: none;
-            padding: 4px 10px;
-            border-radius: 4px;
+            padding: 4px 8px;
+            border-radius: 3px;
             cursor: pointer;
-            font-size: 12px;
+            font-size: 11px;
             white-space: nowrap;
             transition: background 0.2s;
+            flex-shrink: 0;
         }
 
         .skip-btn:hover {
@@ -351,14 +367,12 @@
                          draggable="true"
                          data-project-id="${project.id}"
                          data-list-type="${listType}">
-                        <div class="project-header">
-                            <div class="project-info">
-                                <div class="customer-name">${project.name || 'Unknown Customer'}</div>
-                                <div class="project-title">${projectTitle}</div>
-                                <div class="creation-date">Created: ${createdDate}</div>
-                            </div>
-                            <button class="skip-btn" data-project-id="${project.id}">Skip Today</button>
+                        <div class="project-info">
+                            <div class="customer-name">${project.name || 'Unknown Customer'}</div>
+                            <div class="project-title">${projectTitle}</div>
+                            <div class="creation-date">${createdDate}</div>
                         </div>
+                        <button class="skip-btn" data-project-id="${project.id}">Skip</button>
                     </div>
                 `;
             }).join('');
