--- a/priority-manager.html
+++ b/priority-manager.html
@@ -393,6 +393,8 @@
                         console.log('Filtered todos (no list):', todosData.debug.filteredTodos);
                         console.log('Sample todos with list values:');
                         console.table(todosData.debug.sampleTodos);
+                        console.log('ALL todos list values:');
+                        console.table(todosData.debug.allTodosListValues);
                         console.log('========================');
                     }
                     
