--- a/launcher.html
+++ b/launcher.html
@@ -131,7 +131,7 @@
                 <p>Organize milestones, manage workflows, and track progress</p>
             </a>
 
-            <a href="daily-scheduler.html" class="tool-card">
+            <a href="priority-manager.html" class="tool-card">
                 <div class="tool-icon">📅</div>
                 <h2>Daily Scheduler</h2>
                 <p>Plan daily work, schedule tasks, and manage your bench time</p>
