--- a/launcher.html
+++ b/launcher.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roadman Guitars - Dashboard</title>
-    <link rel="manifest" href="/manifest.js">
+    <link rel="manifest" href="/manifest.json">
     <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png">
     <link rel="apple-touch-icon" href="/icon-192.png">
@@ -18,129 +18,117 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
+            height: 100vh;
             display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
+            flex-direction: column;
+            overflow: hidden;
         }
 
-        .container {
-            max-width: 800px;
-            width: 100%;
+        .tab-bar {
+            display: flex;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            padding: 0;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
 
-        .header {
-            text-align: center;
-            margin-bottom: 50px;
-            color: white;
-        }
-
-        .header h1 {
-            font-size: 2.5em;
-            font-weight: 700;
-            margin-bottom: 10px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
-        }
-
-        .header p {
-            font-size: 1.1em;
-            opacity: 0.9;
-        }
-
-        .tools-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-            gap: 25px;
-            margin-bottom: 30px;
-        }
-
-        .tool-card {
-            background: white;
-            border-radius: 16px;
-            padding: 35px 25px;
-            text-align: center;
+        .tab {
+            flex: 1;
+            padding: 16px 20px;
+            background: transparent;
+            border: none;
+            color: rgba(255,255,255,0.7);
+            font-size: 14px;
+            font-weight: 500;
             cursor: pointer;
             transition: all 0.3s ease;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-            text-decoration: none;
-            color: inherit;
-            display: block;
-        }
-
-        .tool-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 15px 40px rgba(0,0,0,0.3);
-        }
-
-        .tool-icon {
-            font-size: 3em;
-            margin-bottom: 15px;
-        }
-
-        .tool-card h2 {
-            font-size: 1.3em;
-            margin-bottom: 10px;
-            color: #333;
-        }
-
-        .tool-card p {
-            font-size: 0.9em;
-            color: #666;
-            line-height: 1.4;
-        }
-
-        .footer {
+            border-bottom: 3px solid transparent;
             text-align: center;
+        }
+
+        .tab:hover {
+            background: rgba(255,255,255,0.1);
             color: white;
-            font-size: 0.9em;
-            opacity: 0.8;
-            margin-top: 40px;
+        }
+
+        .tab.active {
+            color: white;
+            border-bottom-color: white;
+            background: rgba(255,255,255,0.15);
+        }
+
+        .content-area {
+            flex: 1;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .tab-content {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.3s ease;
+        }
+
+        .tab-content.active {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .tab-content iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
         }
 
         @media (max-width: 768px) {
-            .header h1 {
-                font-size: 2em;
-            }
-
-            .tools-grid {
-                grid-template-columns: 1fr;
-                gap: 20px;
+            .tab {
+                padding: 12px 10px;
+                font-size: 12px;
             }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h1>Roadman Guitars</h1>
-            <p>Project Management Dashboard</p>
+    <div class="tab-bar">
+        <button class="tab active" data-tab="project">🎸 Project Management</button>
+        <button class="tab" data-tab="workflow">⚙️ Workflow</button>
+        <button class="tab" data-tab="scheduler">📅 Scheduler</button>
+    </div>
+
+    <div class="content-area">
+        <div class="tab-content active" id="project">
+            <iframe src="project-management-estimate.html"></iframe>
         </div>
-
-        <div class="tools-grid">
-            <a href="project-management-estimate.html" class="tool-card">
-                <div class="tool-icon">🎸</div>
-                <h2>Project Management</h2>
-                <p>Create and manage estimates, track projects, and handle billing</p>
-            </a>
-
-            <a href="workflow-management.html" class="tool-card">
-                <div class="tool-icon">⚙️</div>
-                <h2>Workflow Management</h2>
-                <p>Organize milestones, manage workflows, and track progress</p>
-            </a>
-
-            <a href="priority-manager.html" class="tool-card">
-                <div class="tool-icon">📅</div>
-                <h2>Daily Scheduler</h2>
-                <p>Plan daily work, schedule tasks, and manage your bench time</p>
-            </a>
+        <div class="tab-content" id="workflow">
+            <iframe src="workflow-management.html"></iframe>
         </div>
-
-        <div class="footer">
-            <p>San Antonio, Texas</p>
+        <div class="tab-content" id="scheduler">
+            <iframe src="daily-scheduler.html"></iframe>
         </div>
     </div>
+
+    <script>
+        // Tab switching logic
+        const tabs = document.querySelectorAll('.tab');
+        const tabContents = document.querySelectorAll('.tab-content');
+
+        tabs.forEach(tab => {
+            tab.addEventListener('click', () => {
+                const tabName = tab.dataset.tab;
+
+                // Remove active class from all tabs and contents
+                tabs.forEach(t => t.classList.remove('active'));
+                tabContents.forEach(content => content.classList.remove('active'));
+
+                // Add active class to clicked tab and corresponding content
+                tab.classList.add('active');
+                document.getElementById(tabName).classList.add('active');
+            });
+        });
+    </script>
 </body>
 </html>
