--- a/launcher.html
+++ b/launcher.html
@@ -107,7 +107,7 @@
             <iframe src="workflow-management.html"></iframe>
         </div>
         <div class="tab-content" id="scheduler">
-            <iframe src="daily-scheduler.html"></iframe>
+            <iframe src="priority-manager.html"></iframe>
         </div>
     </div>
 
