--- a/project-management-estimate.html
+++ b/project-management-estimate.html
@@ -62,6 +62,8 @@
     .milestone-hours input{width:100%;border:none;background:transparent;padding:4px;text-align:center;font-size:14px}
     .milestone-actual-hours{width:80px}
     .milestone-actual-hours input{width:100%;border:none;background:transparent;padding:4px;text-align:center;font-size:12px;color:#666}
+    .milestone-fixed-price{width:80px}
+    .milestone-fixed-price input{width:100%;border:none;background:transparent;padding:4px;text-align:center;font-size:12px;color:#2196f3;font-weight:bold}
     .milestone-status{width:100px}
     .milestone-status select{width:100%;border:none;background:transparent;padding:2px;font-size:12px}
     .milestone-actions{display:flex;gap:5px;width:80px;align-items:center}
@@ -480,7 +482,13 @@
       // Calculate labor cost from billable milestones
       const billableMilestones = currentMilestones.filter(m => m.includeInEstimate !== false);
       const laborCost = billableMilestones.reduce((sum, m) => {
-        return sum + (parseFloat(m.estimatedHours) || 0) * hourlyRate;
+        // Use fixed price if provided, otherwise calculate from hours and round UP
+        if (m.fixedPrice && parseFloat(m.fixedPrice) > 0) {
+          return sum + parseFloat(m.fixedPrice);
+        } else {
+          const hourlyCalculation = (parseFloat(m.estimatedHours) || 0) * hourlyRate;
+          return sum + Math.ceil(hourlyCalculation); // Round UP to nearest dollar
+        }
       }, 0);
       
       // Calculate parts cost
@@ -1213,6 +1221,14 @@
                    onchange="updateMilestone(${index}, 'estimatedHours', this.value); calculateBillingTotals();"
                    title="Estimated Hours"
                    placeholder="Est">
+          </div>
+          <div class="milestone-fixed-price">
+            <input type="number" step="1" min="0"
+                   value="${milestone.fixedPrice || ''}"
+                   onchange="updateMilestone(${index}, 'fixedPrice', this.value); calculateBillingTotals();"
+                   title="Fixed Price (overrides hours × rate)"
+                   placeholder="$"
+                   style="border:1px solid #e0e0e0;border-radius:3px;">
           </div>
           <div class="milestone-actual-hours">
             <input type="number" step="0.25" min="0.25"
