--- a/project-management-estimate.html
+++ b/project-management-estimate.html
@@ -2096,6 +2096,11 @@
 
         document.getElementById('editorTitle').textContent = projectData.name;
         await refreshProjects();
+        
+        // Notify Priority Manager if status changed
+        if (projectData.status) {
+          localStorage.setItem('project_status_changed', Date.now().toString());
+        }
 
       } catch (error) {
         console.error('Save failed:', error);
