--- a/project-management-estimate.html
+++ b/project-management-estimate.html
@@ -155,7 +155,7 @@
         <div class="header-buttons">
           <select id="statusFilter" class="status-filter" onchange="filterProjectsByStatus()">
             <option value="On The Bench">On the Bench</option>
-            <option value="On Deck">Waiting</option>
+            <option value="Waiting">Waiting</option>
             <option value="Done">Done</option>
             <option value="Returned">Returned</option>
           </select>
