--- a/luthier_report_template.html
+++ b/luthier_report_template.html
@@ -294,7 +294,7 @@
         <div class="company-name">ROADMAN GUITARS</div>
         <div class="company-tagline">          </div>
         <div class="contact-info">
-          San Antonio, TX | <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="8dffe2ece9e0ece3eaf8e4f9ecfffecdeae0ece4e1a3eee2e0">[email&#160;protected]</a>
+          San Antonio, TX | <a href="mailto:info@roadmanguitars.com">info@roadmanguitars.com</a>
         </div>
       </div>
       <div class="report-date">
@@ -492,7 +492,7 @@
     <div id="debugDetails" style="margin-top: 5px; font-size: 9px;"></div>
   </div>
 
-  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+  <script>
   (function(){
     // Pull payload saved by the management page
     const raw = localStorage.getItem('luthierReportData');
